Get Data from a server

--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -1,8 +1,10 @@
 <div *ngIf="member">
-  <h2>{{member.lastName | uppercase}} Details</h2>
+  <h2>{{member.lastName | uppercase}} Детали</h2>
   <div><span>id: </span>{{member.id}}</div>
   <div>
-    <label for="member-name">Member name: </label>
+    <label for="member-name">Имя участника: </label>
     <input [(ngModel)]="member.lastName" id="member-name" placeholder="name">
   </div>
 </div>
+<button (click)="goBack()">Назад</button>
+<button (click)="save()">Сохранить</button>
