--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <h1>{{title}}</h1>
-<app-members></app-members>
+<div class="startDate">Дата начала соревнования {{startDate| date:"dd.MM.yyyy, HH:mm:ss"}}</div>
+<nav>
+  <a routerLink="/home">Главная</a>
+  <a routerLink="/rules">Правила</a>
+  <a routerLink="/members">Участники</a>
+  <a routerLink="/equipment">Снаряжение</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
