--- a/src/app/equipment/equipment.component.css
+++ b/src/app/equipment/equipment.component.css
@@ -1,5 +1,5 @@
 /* HeroesComponent's private CSS styles */
-.members {
+.equipment {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
@@ -14,16 +14,16 @@ input {
   box-sizing: border-box;
 }
 
-.members li {
+.equipment li {
   position: relative;
   cursor: pointer;
 }
 
-.members li:hover {
+.equipment li:hover {
   left: .1em;
 }
 
-.members a {
+.equipment a {
   color: #333;
   text-decoration: none;
   background-color: #EEE;
@@ -35,17 +35,17 @@ input {
   width: 100%;
 }
 
-.members a:hover {
+.equipment a:hover {
   color: #2c3a41;
   background-color: #e6e6e6;
 }
 
-.members a:active {
+.equipment a:active {
   background-color: #525252;
   color: #fafafa;
 }
 
-.members .badge {
+.equipment .badge {
   display: inline-block;
   font-size: small;
   color: white;
@@ -86,59 +86,4 @@ button.delete {
 button.delete:hover {
   background-color: #525252;
   color: white;
-}
-
-* {box-sizing: border-box}
-
-/* Add padding to containers */
-.container {
-  padding: 16px;
-}
-
-/* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
-
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Overwrite default styles of hr */
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
-
-/* Set a style for the submit/register button */
-.registerbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
-
-.registerbtn:hover {
-  opacity:1;
-}
-
-/* Add a blue text color to links */
-a {
-  color: dodgerblue;
-}
-
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
-  background-color: #f1f1f1;
-  text-align: center;
 }
